--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 # Claude API
 GEMINI_API_KEY=sk-ant-xxxxx
 
-# Discord
-DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/xxxxx
+# Discord Webhooks - one for each Gmail account/channel
+DISCORD_WEBHOOK_1=https://discord.com/api/webhooks/xxxxx/channel1
+DISCORD_WEBHOOK_2=https://discord.com/api/webhooks/xxxxx/channel2
+DISCORD_WEBHOOK_3=https://discord.com/api/webhooks/xxxxx/channel3
 
 # Gmail accounts to monitor
 GMAIL_ACCOUNT_1=email1@gmail.com
